<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="20dp"
    android:paddingEnd="10dp"
    android:weightSum="8">

    <LinearLayout
        android:id="@+id/linearLayoutParent1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="4"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutChild1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:weightSum="6"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/titleUsername"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/gray"
                android:hint="@string/titleUsername"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grayHint"
                android:autofillHints=""
                android:inputType="text"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutChild2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:weightSum="6"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/titlePhoneNo"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/gray"
                android:hint="@string/titlePhoneNo"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grayHint"
                android:inputType="phone"
                android:autofillHints=""
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutChild3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:weightSum="6"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/titleEmailId"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/gray"
                android:hint="@string/titleEmailId"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grayHint"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutChild4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonCancel"
                android:layout_marginEnd="10dp"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonSubmit"
                android:layout_marginStart="10dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutParent2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="4"
        android:padding="10dp"
        android:orientation="vertical"/>
</LinearLayout>
